fixed the form text overlap issue in the newsletter form

--- a/css/style.css
+++ b/css/style.css
@@ -498,7 +498,7 @@ nav {
 }
 
 .newsletter-form-section {
-  flex-basis: 35%;
+  width: 35%;
   padding: 40px;
   border-radius: 16px;
   border: 1px solid #ff5400;
@@ -509,11 +509,10 @@ nav {
 }
 
 .newsletter-form input {
-  padding: 16px 251px 16px 20px;
+  padding: 16px 25px 16px 20px;
   color: rgba(19, 19, 24, 0.3);
   font-family: Mulish;
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
   line-height: normal;
   border-radius: 8px;
@@ -531,15 +530,12 @@ nav {
   display: flex;
   flex-direction: column;
 }
-.newsletter-form input {
-  padding: 16px 251px 16px 20px;
-}
 
 .newsletter-form button {
   width: 100%;
 }
 .newsletter-image {
-  flex-basis: 65%;
+  width: 65%;
   position: relative;
 }
 
